# deplom

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  file.yaml  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yaml
deploy/: .env  docker-compose.prod.yaml
tests/: conftest.py  factories.py  utils.py
tests/core/views/: test_login.py  test_profile_view.py  test_signup.py  test_update_password.py
tests/goals/views/: test_board.py  test_board_list.py  test_create_board.py
todolist/: filters.py  settings.py  urls.py
todolist/bot/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_delete_tguser.py  0003_initial.py
todolist/bot/tg/: client.py  dc.py
todolist/bot/tg/fsm/: base.py  memory_storage.py
todolist/core/: fields.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
todolist/goals/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_boardparticipant_unique_together_and_more.py  0004_alter_goal_due_date_alter_goalcategory_board.py  0005_board_goalcategory_board_boardparticipant.py  0006_alter_goalcategory_board.py  0007_alter_goal_due_date.py
