[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Rezvanceva <elle81998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
envparse = "^0.2.0"
path = "^16.6.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
ansible-vault-win = "^1.0.0"
serializers = "^0.2.4"
djangorestframework = "^3.14.0"
cfgv = "^3.3.1"
generics = "^6.0.0"


[tool.poetry.group.dev.dependencies]
ansible-vault-win = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
